<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Εφαρμογή Πελάτη</string>
    <string name="gotoRegister">Δεν έχω λογαριασμό στο taxi anytime, γρήγορα για εγγραφή!</string>
    <string name="login">Είσοδος χρήστη</string>
    <string name="username_">"Username : "</string>
    <string name="pushNotification">Ειδοποιήσεις push</string>
    <string name="finddrivers">"Αναζήτηση οδηγών"</string>
    <string name="address">"Διεύθυνση: "</string>
    <string name="DriversList">Λίστα οδηγών</string>

    <!-- Call Activity -->
    <string name="call">Επικοινωνία</string>
    <string name="callactivity">Πραγματοποίηση κλήσης</string>

    <!-- CountDown Activity -->
    <string name="countdown">"Αντίστροφη μέτρηση"</string>
    <string name="countdownText">Παρακαλώ περιμένετε να ενημερωθούν οι διαθέσiμοι οδηγοί για την παραγγελία σας</string>
    <string name="countdownStartTime">"0:00"</string>
    <string name="countdownStartText">"Τερματισμός χρονομέτρου"</string>

    <!-- Comments And Rate Activity -->
    <string name="commentsRating">Αξιολόγηση οδηγού :</string>
    <string name="rate">Βαθμολογείστε τον οδηγό :</string>
    <string name="submit">Υποβολή</string>
    <string name="users_rate">Δώσατε : </string>
    <string name="post_a_comment">Αφήστε ένα σχόλιο σχετικά με τον οδηγό :</string>
   
    
     <string name="customer_splash_screen">Οθόνη εκκίνησης </string>
     
     <string name="customer_see_comments">Σχόλια από πελάτες </string>
     <string name="about_app">Σχετικά με</string>
     
     
     <!-- Register/Edit -->
     <string name="customer_register">Εγγραφή </string>
     <string name="customer_edit">Αλλαγή στοιχείων </string>
     <string name="name">Όνομα: </string>
     <string name="lastname">Επίθετο: </string>
     <string name="cellphone">Κινητό: </string>
     <string name="birthdate">Ημερομηνία Γέννησης: </string>
     <string name="town">Πόλη: </string>
     <string name="mail">E-mail: </string>
     <string name="username">Όνομα χρήστη: </string>
     <string name="password">Κωδικός:  </string>
     <string name="reppassword">Επανάληψη κωδικού: </string>
     <string name="dogegister">Εγγραφή </string>
     <string name="clear">CLEAR </string>
      <string name="edit">Αλλαγή </string>
   
     
     <!-- Report  (για το spinner)-->
     <string name="report">Αναφορά</string>
  	<string-array name="reportReasons">
        <item>Δεν εμφανίστηκε στο ραντεβού</item>
        <item>Ήταν πολύ αγενής</item>
        <item>Δεν τήρούσε τους κανόνες</item>
        <item>Δεν έκοψε απόδειξη</item>
        <item>Αλλο,αναφέρετε παρακάτω</item>
    </string-array>
    <string name="report_driver"> Αναφορά οδηγού</string>
    <string name="report_reason"> Δώστε τον λόγο για τον οποίο κάνετε την αναφορά</string>
    <string name="report_back"> Επιστροφή</string>
    <string name="report_submit"> Υποβολή</string>
    <string name="report_comment"> Σχόλιο</string>
  
    
  <!-- Start- end ride -->
   <string name="start_end_ride">Εκκίνηση - τερματιμός κούρσας</string>
   <string name="btnStartRide">Εκκίνηση κούρσας </string>
   <string name="btnStopRide">Τερματισμός κούρσας </string>  
    

</resources>