<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="51dp"
        android:text="@string/report_driver"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/GiveReasons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activityTitle"
        android:layout_marginTop="40dp"
        android:text="@string/report_reason"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/ReportReasons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/GiveReasons"
        android:entries="@array/reportReasons" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/leaveComment"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/leaveComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ReportReasons"
        android:text="@string/report_comment"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/imageButtonSubmitReport"
        android:onClick="onClkBack"
        android:src="@drawable/button_back" />

    <ImageButton
        android:id="@+id/imageButtonSubmitReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onClkReport"
        android:src="@drawable/button_report" />

</RelativeLayout>